--- a/techalert-dashboard/package.json
+++ b/techalert-dashboard/package.json
@@ -20,11 +20,14 @@
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tauri-apps/cli": ">=2.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
+    "tailwindcss": "^3.4.14",
+    "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "@tauri-apps/cli": ">=2.0.0"
+    "vite": "^5.0.3"
   }
 }
