--- a/techalert-report/package.json
+++ b/techalert-report/package.json
@@ -10,12 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@tauri-apps/api": ">=2.0.0",
     "@tauri-apps/plugin-shell": ">=2.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0",
-    "vite": "^5.3.1",
-    "typescript": "^5.2.2"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1"
   }
 }
