--- a/techalert-report/package.json
+++ b/techalert-report/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tauri-apps/api": ">=2.0.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0"
+    "@tauri-apps/plugin-shell": ">=2.0.0",
+    "ts-proto": "^2.2.5"
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0",
