--- a/techalert-dashboard/package.json
+++ b/techalert-dashboard/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+	"build:proto": "protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto.exe --ts_proto_out=./src/lib/types/ -I ../ ../issues.proto",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -14,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0"
+    "@tauri-apps/plugin-shell": ">=2.0.0",
+    "ts-proto": "^2.2.5"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
