--- a/techalert-dashboard/package.json
+++ b/techalert-dashboard/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/api": ">=2.0.0",
     "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
+    "@tauri-apps/plugin-websocket": "~2",
     "ts-proto": "^2.2.5"
   },
   "devDependencies": {
