--- a/techalert-dashboard/src-tauri/Cargo.toml
+++ b/techalert-dashboard/src-tauri/Cargo.toml
@@ -23,4 +23,5 @@ tauri-plugin-shell = "2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-notification = "2"
+tauri-plugin-websocket = "2"
 
