--- a/techalert-report/package.json
+++ b/techalert-report/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tauri-apps/api": ">=2.0.0",
+    "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
     "ts-proto": "^2.2.5"
   },
