--- a/techalert-dashboard/package.json
+++ b/techalert-dashboard/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tauri-apps/api": ">=2.0.0",
+    "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
     "@tauri-apps/plugin-websocket": "~2",
