--- a/techalert-dashboard/src-tauri/Cargo.toml
+++ b/techalert-dashboard/src-tauri/Cargo.toml
@@ -24,4 +24,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-notification = "2"
 tauri-plugin-websocket = "2"
+tauri-plugin-http = "2"
 
