--- a/techalert-report/package.json
+++ b/techalert-report/package.json
@@ -17,9 +17,14 @@
     "ts-proto": "^2.2.5"
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tauri-apps/cli": ">=2.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
