--- a/techalert-dashboard/package.json
+++ b/techalert-dashboard/package.json
@@ -19,7 +19,9 @@
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
+    "@tauri-apps/plugin-store": "~2",
     "@tauri-apps/plugin-websocket": "~2",
+    "lucide-svelte": "^0.460.1",
     "ts-proto": "^2.2.5"
   },
   "devDependencies": {
@@ -28,9 +30,13 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tauri-apps/cli": ">=2.0.0",
     "autoprefixer": "^10.4.20",
+    "bits-ui": "^0.21.16",
+    "clsx": "^2.1.1",
     "postcss": "^8.4.47",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwind-variants": "^0.3.0",
     "tailwindcss": "^3.4.14",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
