--- a/techalert-dashboard/src-tauri/Cargo.toml
+++ b/techalert-dashboard/src-tauri/Cargo.toml
@@ -25,4 +25,5 @@ serde_json = "1"
 tauri-plugin-notification = "2"
 tauri-plugin-websocket = "2"
 tauri-plugin-http = "2"
+tauri-plugin-store = "2"
 
