--- a/techalert-report/package.json
+++ b/techalert-report/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": ">=2.0.0",
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
+    "@tauri-apps/plugin-sql": "~2",
     "@tauri-apps/plugin-store": "~2",
     "lucide-svelte": "^0.456.0",
     "ts-proto": "^2.2.5"
