added database view

--- a/techalert-dashboard/src-tauri/Cargo.toml
+++ b/techalert-dashboard/src-tauri/Cargo.toml
@@ -26,4 +26,5 @@ tauri-plugin-notification = "2"
 tauri-plugin-websocket = "2"
 tauri-plugin-http = "2"
 tauri-plugin-store = "2"
+tauri-plugin-sql = { version = "2", features = ["mysql"] }
 
