--- a/techalert-dashboard/package.json
+++ b/techalert-dashboard/package.json
@@ -19,6 +19,7 @@
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
+    "@tauri-apps/plugin-sql": "~2",
     "@tauri-apps/plugin-store": "~2",
     "@tauri-apps/plugin-websocket": "~2",
     "lucide-svelte": "^0.460.1",
@@ -30,7 +31,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tauri-apps/cli": ">=2.0.0",
     "autoprefixer": "^10.4.20",
-    "bits-ui": "^0.21.16",
+    "bits-ui": "^0.22.0",
     "clsx": "^2.1.1",
     "postcss": "^8.4.47",
     "svelte": "^4.2.7",
